# mtr-junit-collector

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: check.yml  publish.yml
app/: database.py  main.py  models.py  utils.py
app/api/: endpoints.py
docker-compose/: .env  .env.dev  docker-compose.yaml
tests/integration/: test_api.py
tests/integration/sample/: galera.xml  mtr_01.xml  mtr_02.xml  mtr_03.xml  nm.xml  rocksdb.xml  s3.xml
tests/unit/: test_utils.py
